--- a/Team7.LoLAPIManager/Team7.LoLApiManager.csproj
+++ b/Team7.LoLAPIManager/Team7.LoLApiManager.csproj
@@ -34,6 +34,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Core\Exceptions\BadRequest.cs" />
+    <Compile Include="Core\Exceptions\BaseLoLException.cs" />
+    <Compile Include="Core\Exceptions\GameDataNotFound.cs" />
+    <Compile Include="Core\Exceptions\InternalServerError.cs" />
+    <Compile Include="Core\Exceptions\LoLApiException.cs" />
+    <Compile Include="Core\Exceptions\RateLimitExceeded.cs" />
+    <Compile Include="Core\Exceptions\ServiceUnavailable.cs" />
+    <Compile Include="Core\Exceptions\Unauthorized.cs" />
+    <Compile Include="Core\LoLApiErrors.cs" />
     <Compile Include="Core\RateLimit.cs" />
     <Compile Include="Core\RateLimitManager.cs" />
     <Compile Include="Models\Champion.cs" />
@@ -45,6 +54,11 @@
     <Compile Include="LoLManagerConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\ApiEnpoints.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Services\ChampionService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Core\ApiVersions.cs" />
@@ -57,6 +71,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
