1. Added League service. 2. Added Comments to some classes. 3.Created extention methods for converting Epoch Date to a .net DateTime and to create a comma delimited string from a list of int.

--- a/Team7.LoLAPIManager/Team7.LoLApiManager.csproj
+++ b/Team7.LoLAPIManager/Team7.LoLApiManager.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Core\ApiGameQueueTypes.cs" />
     <Compile Include="Core\Exceptions\BadRequest.cs" />
     <Compile Include="Core\Exceptions\BaseLoLException.cs" />
     <Compile Include="Core\Exceptions\DataNotFound.cs" />
@@ -49,6 +50,10 @@
     <Compile Include="Dto\Game\PlayerDto.cs" />
     <Compile Include="Dto\Game\RawStatsDto.cs" />
     <Compile Include="Dto\Game\RecentGamesDto.cs" />
+    <Compile Include="Dto\League\LeagueDto.cs" />
+    <Compile Include="Dto\League\LeagueEntryDto.cs" />
+    <Compile Include="Dto\League\MiniSeriesDto.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Models\Champion\Champion.cs" />
     <Compile Include="Models\Champion\ChampionList.cs" />
     <Compile Include="Core\ApiRegions.cs" />
