--- a/Team7.LoLAPIManager/Team7.LoLApiManager.csproj
+++ b/Team7.LoLAPIManager/Team7.LoLApiManager.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Core\ApiChampionData.cs" />
     <Compile Include="Core\ApiGameQueueTypes.cs" />
     <Compile Include="Core\Exceptions\BadRequest.cs" />
     <Compile Include="Core\Exceptions\BaseLoLException.cs" />
@@ -53,6 +54,19 @@
     <Compile Include="Dto\League\LeagueDto.cs" />
     <Compile Include="Dto\League\LeagueEntryDto.cs" />
     <Compile Include="Dto\League\MiniSeriesDto.cs" />
+    <Compile Include="Dto\Static\Champion\BlockDto.cs" />
+    <Compile Include="Dto\Static\Champion\BlockItemDto.cs" />
+    <Compile Include="Dto\Static\Champion\ChampionDto.cs" />
+    <Compile Include="Dto\Static\Champion\ChampionListDto.cs" />
+    <Compile Include="Dto\Static\Champion\ChampionSpellDto.cs" />
+    <Compile Include="Dto\Static\Champion\ImageDto.cs" />
+    <Compile Include="Dto\Static\Champion\InfoDto.cs" />
+    <Compile Include="Dto\Static\Champion\LevelTipDto.cs" />
+    <Compile Include="Dto\Static\Champion\PassiveDto.cs" />
+    <Compile Include="Dto\Static\Champion\Recommended.cs" />
+    <Compile Include="Dto\Static\Champion\SkinDto.cs" />
+    <Compile Include="Dto\Static\Champion\SpellVarsDto.cs" />
+    <Compile Include="Dto\Static\Champion\StatsDto.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Models\Champion\Champion.cs" />
     <Compile Include="Models\Champion\ChampionList.cs" />
@@ -68,6 +82,19 @@
     <Compile Include="Models\League\League.cs" />
     <Compile Include="Models\League\LeagueEntry.cs" />
     <Compile Include="Models\League\MiniSeries.cs" />
+    <Compile Include="Models\Static\Champion\Block.cs" />
+    <Compile Include="Models\Static\Champion\BlockItem.cs" />
+    <Compile Include="Models\Static\Champion\Champion.cs" />
+    <Compile Include="Models\Static\Champion\ChampionList.cs" />
+    <Compile Include="Models\Static\Champion\ChampionSpell.cs" />
+    <Compile Include="Models\Static\Champion\Image.cs" />
+    <Compile Include="Models\Static\Champion\Info.cs" />
+    <Compile Include="Models\Static\Champion\LevelTip.cs" />
+    <Compile Include="Models\Static\Champion\Passive.cs" />
+    <Compile Include="Models\Static\Champion\Recommended.cs" />
+    <Compile Include="Models\Static\Champion\Skin.cs" />
+    <Compile Include="Models\Static\Champion\SpellVars.cs" />
+    <Compile Include="Models\Static\Champion\Stats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\ApiEnpoints.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -80,6 +107,7 @@
     <Compile Include="Services\LeagueService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Core\ApiVersions.cs" />
+    <Compile Include="Services\StaticService.cs" />
     <Compile Include="WebUtility.cs" />
   </ItemGroup>
   <ItemGroup>
